Refactor to split project into three modules: cli, gui, and shared